source/libopensc/pkcs15.d

	int sc_pkcs15_decode_enveloped_data(sc_context* ctx, sc_pkcs15_enveloped_data* result, const(ubyte)* buf, size_t buflen);
	int sc_pkcs15_encode_enveloped_data(sc_context* ctx, sc_pkcs15_enveloped_data* data, ubyte** buf, size_t* buflen);
	int sc_pkcs15_add_object(sc_pkcs15_card* p15card, sc_pkcs15_object* obj);
	void sc_pkcs15_remove_object(sc_pkcs15_card* p15card, sc_pkcs15_object* obj);
	int sc_pkcs15_add_df(sc_pkcs15_card*, uint, const(sc_path)*);
	int sc_pkcs15_add_unusedspace(sc_pkcs15_card* p15card, const(sc_path)* path, const(sc_pkcs15_id)* auth_id);
	int sc_pkcs15_parse_unusedspace(const(ubyte)* buf, size_t buflen, sc_pkcs15_card* card);
	int sc_pkcs15_encode_unusedspace(sc_context* ctx, sc_pkcs15_card* p15card, ubyte** buf, size_t* buflen);
	int sc_pkcs15_prkey_attrs_from_cert(sc_pkcs15_card*, sc_pkcs15_object*, sc_pkcs15_object**);
	void sc_pkcs15_free_prkey_info(sc_pkcs15_prkey_info* key);
	void sc_pkcs15_free_pubkey_info(sc_pkcs15_pubkey_info* key);
	void sc_pkcs15_free_cert_info(sc_pkcs15_cert_info* cert);
	void sc_pkcs15_free_data_info(sc_pkcs15_data_info* data);
	void sc_pkcs15_free_auth_info(sc_pkcs15_auth_info* auth_info);
	void sc_pkcs15_free_object(sc_pkcs15_object* obj);
	int sc_pkcs15_read_file(sc_pkcs15_card* p15card, const(sc_path)* path, ubyte** buf, size_t* buflen);
	int sc_pkcs15_read_cached_file(sc_pkcs15_card* p15card, const(sc_path)* path, ubyte** buf, size_t* bufsize);
	int sc_pkcs15_cache_file(sc_pkcs15_card* p15card, const(sc_path)* path, const(ubyte)* buf, size_t bufsize);
	int sc_pkcs15_compare_id(const(sc_pkcs15_id)* id1, const(sc_pkcs15_id)* id2);
	const(char)* sc_pkcs15_print_id(const(sc_pkcs15_id)* id);
	void sc_pkcs15_format_id(const(char)* id_in, sc_pkcs15_id* id_out);
	int sc_pkcs15_hex_string_to_id(const(char)* in_, sc_pkcs15_id* out_);
	int sc_der_copy(sc_pkcs15_der*, const(sc_pkcs15_der)*);
	int sc_pkcs15_get_object_id(const(sc_pkcs15_object)*, sc_pkcs15_id*);
	int sc_pkcs15_get_object_guid(sc_pkcs15_card*, const(sc_pkcs15_object)*, uint, ubyte*, size_t*);
	int sc_pkcs15_serialize_guid(ubyte*, size_t, uint, char*, size_t);
	int sc_encode_oid(sc_context*, sc_object_id*, ubyte**, size_t*);
	sc_app_info* sc_pkcs15_get_application_by_type(sc_card*, char*);
	int sc_pkcs15_make_absolute_path(const(sc_path)* parent, sc_path* child);
	void sc_pkcs15_free_object_content(sc_pkcs15_object*);
	int sc_pkcs15_allocate_object_content(sc_context*, sc_pkcs15_object*, const(ubyte)*, size_t);
	sc_supported_algo_info* sc_pkcs15_get_supported_algo(sc_pkcs15_card*, uint, uint);
	int sc_pkcs15_add_supported_algo_ref(sc_pkcs15_object*, sc_supported_algo_info*);
	int sc_pkcs15_fix_ec_parameters(sc_context*, sc_ec_parameters*);
	int sc_pkcs15_convert_bignum(sc_pkcs15_bignum* dst, const(void)* bignum);
	int sc_pkcs15_convert_prkey(sc_pkcs15_prkey* key, void* evp_key);
	int sc_pkcs15_convert_pubkey(sc_pkcs15_pubkey* key, void* evp_key);
	char* sc_pkcs15_get_lastupdate(sc_pkcs15_card* p15card);
	int sc_pkcs15_get_generalized_time(sc_context* ctx, char** out_);
	struct sc_pkcs15emu_opt
	{
		scconf_block* blk;
		uint flags;
	}
	enum SC_PKCS15EMU_FLAGS_NO_CHECK = 1;
	extern int sc_pkcs15_bind_synthetic(sc_pkcs15_card*);
	extern int sc_pkcs15_is_emulation_only(sc_card*);
	int sc_pkcs15emu_object_add(sc_pkcs15_card*, uint, const(sc_pkcs15_object)*, const(void)*);
	int sc_pkcs15emu_add_pin_obj(sc_pkcs15_card*, const(sc_pkcs15_object)*, const(sc_pkcs15_auth_info)*);
	int sc_pkcs15emu_add_rsa_prkey(sc_pkcs15_card*, const(sc_pkcs15_object)*, const(sc_pkcs15_prkey_info)*);
	int sc_pkcs15emu_add_rsa_pubkey(sc_pkcs15_card*, const(sc_pkcs15_object)*, const(sc_pkcs15_pubkey_info)*);
	int sc_pkcs15emu_add_ec_prkey(sc_pkcs15_card*, const(sc_pkcs15_object)*, const(sc_pkcs15_prkey_info)*);
	int sc_pkcs15emu_add_ec_pubkey(sc_pkcs15_card*, const(sc_pkcs15_object)*, const(sc_pkcs15_pubkey_info)*);
	int sc_pkcs15emu_add_x509_cert(sc_pkcs15_card*, const(sc_pkcs15_object)*, const(sc_pkcs15_cert_info)*);
	int sc_pkcs15emu_add_data_object(sc_pkcs15_card*, const(sc_pkcs15_object)*, const(sc_pkcs15_data_info)*);
}
